replaced all fragmaent and activity